nova (1:2013.2-0ubuntu1) UNRELEASED; urgency=low

  * New upstream release.
  * debian/control:
    - Open icehouse release.
    - Bump the versioned dependencies of python-pbr, python-migrate,
      and python-six.
  * Dropped xcp support (LP: #1197386) (LP: #1199791):
    - debian/patches/path-to-the-xenhost.conf-fixup.patch: Removed
    - debian/control: Removed nova-compute-xcp, nova-xcp-plugins,
      and nova-xcp-network.
  * debian/patches/fix-boto-versioning.patch: Dropped no longer needed.
  * debian/patches/native-lxc-hypervisor.patch: Dropped.

 -- Chuck Short <zulcss@ubuntu.com>  Thu, 14 Nov 2013 08:51:55 -0500

nova (1:2013.2-0ubuntu1) saucy; urgency=low

  * New upstream release (LP: #1236462).

 -- Chuck Short <zulcss@ubuntu.com>  Thu, 17 Oct 2013 11:27:05 -0400

nova (1:2013.2~rc2-0ubuntu1) saucy; urgency=low

  * New upstream release candidate (LP: #1239156):
    - d/p/fix-boto-versioning.patch: Cherry picked fix from upstream gerrit for
      test failures with boto < 2.13.
  * d/control: Add epoch to versioned dependencies for python-oslo.config. 

 -- James Page <james.page@ubuntu.com>  Sun, 13 Oct 2013 11:05:46 +0100

nova (1:2013.2~rc1-0ubuntu3) saucy; urgency=low

  * debian/patches/native-lxc-hypervisor.patch: Update
    rootwrap.d/compute.filters to allow nova-network to start.
    (LP: #1235373)

 -- Chuck Short <zulcss@ubuntu.com>  Fri, 04 Oct 2013 13:18:17 -0400

nova (1:2013.2~rc1-0ubuntu2) saucy; urgency=low

  [ Chuck Short ]
  * debian/patches/fix-novnc-regression.patch: Fix regression caused
    by use of more recent version of websockify upstream (LP: #1235044).

 -- James Page <james.page@ubuntu.com>  Fri, 04 Oct 2013 11:13:34 +0100

nova (1:2013.2~rc1-0ubuntu1) saucy; urgency=low

  * New upstream release candidate.
  * debian/control:
    - Dropped python-setuptools-git, python-carrot, python-unittest2,
      python-daemon, python-gflags, python-cheetah, python-glance,