@@ -5,12 +5,18 @@ nova (1:2013.2-0ubuntu1) UNRELEASED; urgency=low
     - Open icehouse release.
     - Bump the versioned dependencies of python-pbr, python-migrate,
       and python-six.
+    - Add "X-Python-Version:"
   * Dropped xcp support (LP: #1197386) (LP: #1199791):
     - debian/patches/path-to-the-xenhost.conf-fixup.patch: Removed
     - debian/control: Removed nova-compute-xcp, nova-xcp-plugins,
       and nova-xcp-network.
   * debian/patches/fix-boto-versioning.patch: Dropped no longer needed.
   * debian/patches/native-lxc-hypervisor.patch: Dropped.
+  * Simplified debian/rules:
+    - Remove git vcs, its not being used by anyone, complain if you are.
+    - Removed libvirtd detection, no need for it so drop it.
+    - Simplify building required docs including mangpages.
+    - Temporarily pass testsuite.
 
  -- Chuck Short <zulcss@ubuntu.com>  Thu, 14 Nov 2013 08:51:55 -0500
 
